// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComparisonCard should match snapshot with first district avg greater than second district avg 1`] = `
<div
  className="compare-data-card"
>
  <div
    className="district-title"
  >
    Aggregate Avg.
    <p
      className="district-high"
    >
      0.7
    </p>
  </div>
  <p
    className="comparison-value"
  >
    0.651
  </p>
  <div
    className="district-title"
  >
    Aggregate Avg.
    <p
      className="district-low"
    >
      0.54
    </p>
  </div>
</div>
`;

exports[`ComparisonCard should match snapshot with no data 1`] = `
<div
  className="compare-data-card"
>
  <div
    className="district-title"
  >
    Aggregate Avg.
    <p
      className="district-high"
    />
  </div>
  <p
    className="comparison-value"
  />
  <div
    className="district-title"
  >
    Aggregate Avg.
    <p
      className="district-high"
    />
  </div>
</div>
`;

exports[`ComparisonCard should match snapshot with second district avg greater than first district avg 1`] = `
<div
  className="compare-data-card"
>
  <div
    className="district-title"
  >
    Aggregate Avg.
    <p
      className="district-low"
    >
      0.407
    </p>
  </div>
  <p
    className="comparison-value"
  >
    0.768
  </p>
  <div
    className="district-title"
  >
    Aggregate Avg.
    <p
      className="district-high"
    >
      0.53
    </p>
  </div>
</div>
`;
